--- a/css/index.css
+++ b/css/index.css
@@ -10,12 +10,12 @@ a{text-decoration:none; cursor:pointer;}
 .clearfix:after{ content:" "; position:absolute; width:0px; height:0px; clear:both;}
 .container{width: 1200px;margin:0 auto;}
 
-.header { width: 100%; min-width: 1200px; padding-bottom: 16px; }
-.header .logo { float: left; }
-.header .logo img { float: left; }
-.header .logo dl { float: left; padding: 32px 0 0 53px; }
-.header .logo dl dt { font-size: 36px; color: #383630; font-weight: bold; letter-spacing: 26px; }
-.header .logo dl dd { font-size: 16px; color: #383630; letter-spacing: 13px; }
+.header { width: 100%; min-width: 1200px; padding-bottom: 16px; background: #f4f1e8; }
+/*.header .logo { float: left; }*/
+.header .logo img { float: right; }
+.header .logo dl { /*float: left;*/ padding: 32px 0 0 0; text-align: center; }
+.header .logo dl dt { font-size: 36px; color: #383630; font-weight: bold; /*letter-spacing: 26px;*/ }
+.header .logo dl dd { font-size: 16px; color: #383630; /*letter-spacing: 13px;*/margin-top: 2px; }
 .header .form_search { float: right; width: 328px; height: 33px; line-height: 33px; border: 1px solid #809f66; box-sizing: border-box; margin-top: 45px; box-shadow: inset 0 0 1px 1px #becbab; }
 .header .form_search input[type="text"] { float: left; width: 290px; height: 100%; font-size: 14px; color: #ccc; text-indent: 5px; }
 .header .form_search input[type="submit"] { float: right; width: 28px; height: 100%; background: url(../images/search.png) no-repeat center; text-indent: -9999px; }
@@ -67,14 +67,16 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .xianshi li a.img { display: block; position: relative; }
 .content .content_wrap .xianshi li a.img img { width: 100%; }
 .content .content_wrap .xianshi li a.img .time { width: 180px; height: 34px; text-align: center; line-height: 34px; background-color: rgba(192,192,192,0.6); font-size: 16px; color: #7d0101; position: absolute; top: 30px; right: 0; }
-.content .content_wrap .xianshi li .desc_btn { font-size: 16px; line-height: 16px; color: #fff; margin-top: 12px; }
-.content .content_wrap .xianshi li .desc_btn p { display: inline-block; width: 170px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; }
-.content .content_wrap .xianshi li .desc_btn a { display: inline-block; width: 52px; height: 20px; text-align: center; line-height: 20px; background-color: #fff; color: #809f66; margin-left: 10px; }
-.footer { width: 100%; min-width: 1200px; padding: 35px 0 113px; background-color: #809f66; }
+.content .content_wrap .xianshi li .desc_btn { font-size: 16px; line-height: 16px; color: #fff; margin-top: 12px; position: relative; }
+.content .content_wrap .xianshi li .desc_btn p { display: inline-block; width: 170px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; cursor: pointer; }
+.content .content_wrap .xianshi li .desc_btn p:hover { text-decoration: underline; }
+.content .content_wrap .xianshi li .desc_btn a { display: inline-block; width: 52px; height: 20px; text-align: center; line-height: 20px; background-color: #fff; color: #809f66; margin-left: 10px; box-sizing: border-box; position: absolute; right: 0; top: 0; }
+.content .content_wrap .xianshi li .desc_btn a:hover { border: 1px solid #fff; padding: 2px; }
+.footer { width: 100%; min-width: 1200px; padding: 58px 0 62px; background-color: #809f66; }
 .footer h1 { text-align: center; }
-.footer dl { display: inline-block; text-align: left; vertical-align: middle; }
-.footer dl dt { font-size: 36px; color: #383630; font-weight: bold; letter-spacing: 26px; }
-.footer dl dd { font-size: 16px; color: #383630; letter-spacing: 13px; }
+.footer dl { display: inline-block; text-align: center; vertical-align: middle; margin-right: 40px; }
+.footer dl dt { font-size: 36px; color: #383630; font-weight: bold; }
+.footer dl dd { font-size: 16px; color: #383630; margin-top: 3px; }
 .footer ul { padding: 70px 50px 0; box-sizing: border-box; }
 .footer li { float: left; width: 25%; padding: 0 50px; box-sizing: border-box; border-left: 1px solid #fff; letter-spacing: 2px; }
 .footer li:first-child { border-left: none; }
