--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,7 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .hot li { float: left; width: 25%; padding: 4px; box-sizing: border-box; }
 .content .content_wrap .hot li h5 { font-size: 24px; color: #809f66; border-bottom: 1px solid #809f66; margin-bottom: 15px; padding-bottom: 10px; }
 .content .content_wrap .hot li a { position: relative; display: block; }
+.content .content_wrap .hot li a:hover:after { content: ''; width: 100%; height: 100%; border: 1px solid #434343; position: absolute; left: -1px; top: -1px; box-shadow: 0 0 6px 2px rgba(180,176,164,0.8); }
 .content .content_wrap .hot li img { display: block; width: 100%; height: 422px; }
 .content .content_wrap .hot li .desc { position: absolute; bottom: 28px; left: 0; right: 0; width: 100%; background-color: rgba(128,159,102,0.6); text-align: center; padding: 24px 0; }
 .content .content_wrap .hot li .desc h6 { font-size: 24px; color: #fff; font-weight: bold; }
@@ -49,13 +50,14 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .tuijian { margin-top: 22px; }
 .content .content_wrap .tuijian h5 { background-color: #809f66; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; }
 .content .content_wrap .tuijian h5 a { float: right; font-size: 16px; color: #fff; }
-.content .content_wrap .tuijian li { float: left; width: 25%; margin-top: 20px; }
+.content .content_wrap .tuijian li { float: left; width: 25%; margin-top: 20px; padding: 1px; box-sizing: border-box; }
 .content .content_wrap .tuijian li a { display: block; position: relative; }
 .content .content_wrap .tuijian li a.temp { margin-top: 10px; height: 310px; }
+.content .content_wrap .tuijian li a.temp:hover:after { content: ''; width: 100%; height: 100%; border: 1px solid #434343; position: absolute; left: -1px; top: -1px; box-shadow: 0 0 6px 2px rgba(180,176,164,0.8); }
 .content .content_wrap .tuijian li a.temp:first-child { margin-top: 0; }
 .content .content_wrap .tuijian li img { display: block; width: 100%; height: 100%; }
 .content .content_wrap .tuijian li .tip { width: 180px; height: 34px; text-align: center; line-height: 34px; background-color: #809f66; font-size: 16px; color: #fff; position: absolute; bottom: 22px; left: 50%; margin-left: -90px; }
-.content .content_wrap .tuijian li.lunbo { width: 50%; height: 630px; padding: 0 10px; box-sizing: border-box; }
+.content .content_wrap .tuijian li.lunbo { width: 50%; height: 630px; padding: 1px 10px; box-sizing: border-box; }
 .content .content_wrap .tuijian li.lunbo img { height: 630px; }
 .content .content_wrap .tuijian li.lunbo .swiper-button-prev, .swiper-container-rtl .swiper-button-next { background-color: rgba(128,159,102,0.6); left: 0; width: 50px; height: 50px; }
 .swiper-button-next.swiper-button-white, .swiper-container-rtl .swiper-button-prev.swiper-button-white { background-color: rgba(128,159,102,0.6); right: 0; width: 50px; height: 50px; }
@@ -64,14 +66,15 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .xianshi h5 a { float: right; font-size: 16px; color: #fff; }
 .content .content_wrap .xianshi ul { padding: 0 6px; box-sizing: border-box; }
 .content .content_wrap .xianshi li { float: left; width: 25%; margin-top: 20px; padding: 6px; box-sizing: border-box; }
-.content .content_wrap .xianshi li a.img { display: block; position: relative; }
+.content .content_wrap .xianshi li a.img { display: block; position: relative; box-sizing: border-box; }
 .content .content_wrap .xianshi li a.img img { width: 100%; }
+.content .content_wrap .xianshi li a.img:hover:after { content: ''; width: 100%; height: 100%; border: 1px solid #434343; position: absolute; left: -1px; top: -1px; box-shadow: 0 0 6px 2px rgba(87,122,65,0.8); }
 .content .content_wrap .xianshi li a.img .time { width: 180px; height: 34px; text-align: center; line-height: 34px; background-color: rgba(192,192,192,0.6); font-size: 16px; color: #7d0101; position: absolute; top: 30px; right: 0; }
 .content .content_wrap .xianshi li .desc_btn { font-size: 16px; line-height: 16px; color: #fff; margin-top: 12px; }
 .content .content_wrap .xianshi li .desc_btn p { display: inline-block; width: 170px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; cursor: pointer; }
 .content .content_wrap .xianshi li .desc_btn p:hover { text-decoration: underline; }
 .content .content_wrap .xianshi li .desc_btn a { display: inline-block; width: 52px; height: 20px; text-align: center; line-height: 20px; background-color: #fff; color: #809f66; margin-left: 10px; box-sizing: border-box; position: relative; }
-.content .content_wrap .xianshi li .desc_btn a:hover:after { content: ''; border: 1px solid #fff; width: 54px; height: 22px; position: absolute; left: -1px; top: -1px; }
+.content .content_wrap .xianshi li .desc_btn a:hover:after { content: ''; border: 1px solid #fff; width: 56px; height: 24px; position: absolute; left: -3px; top: -3px; }
 .footer { width: 100%; min-width: 1200px; padding: 58px 0 62px; background-color: #809f66; }
 .footer h1 { text-align: center; }
 .footer dl { display: inline-block; text-align: center; vertical-align: middle; margin-right: 40px; }
