--- a/css/index.css
+++ b/css/index.css
@@ -40,9 +40,11 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap { background-color: #fff; padding: 0 10px 10px 10px; box-sizing: border-box; }
 .content .content_wrap .hot { border: 1px solid #ccc; padding: 4px; }
 .content .content_wrap .hot li { float: left; width: 25%; padding: 4px; box-sizing: border-box; }
-.content .content_wrap .hot li h5 { font-size: 24px; color: #809f66; border-bottom: 1px solid #809f66; margin-bottom: 15px; padding-bottom: 10px; }
+.content .content_wrap .hot li h5 { font-size: 24px; color: #809f66; border-bottom: 1px solid #809f66; margin-bottom: 15px; padding-bottom: 10px; cursor: pointer; }
+.content .content_wrap .hot li h5:hover { font-weight: bold; }
 .content .content_wrap .hot li a { position: relative; display: block; }
 .content .content_wrap .hot li a:hover:after { content: ''; width: 100%; height: 100%; border: 1px solid #434343; position: absolute; left: -1px; top: -1px; box-shadow: 0 0 6px 2px rgba(180,176,164,0.8); }
+.content .content_wrap .hot li a:hover .desc { background-color: rgba(128,159,102,1) }
 .content .content_wrap .hot li img { display: block; width: 100%; height: 422px; }
 .content .content_wrap .hot li .desc { position: absolute; bottom: 28px; left: 0; right: 0; width: 100%; background-color: rgba(128,159,102,0.6); text-align: center; padding: 24px 0; }
 .content .content_wrap .hot li .desc h6 { font-size: 24px; color: #fff; font-weight: bold; }
@@ -50,6 +52,7 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .tuijian { margin-top: 22px; }
 .content .content_wrap .tuijian h5 { background-color: #809f66; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; }
 .content .content_wrap .tuijian h5 a { float: right; font-size: 16px; color: #fff; }
+.content .content_wrap .tuijian h5 a:hover { text-decoration: underline; }
 .content .content_wrap .tuijian li { float: left; width: 25%; margin-top: 20px; padding: 1px; box-sizing: border-box; }
 .content .content_wrap .tuijian li a { display: block; position: relative; }
 .content .content_wrap .tuijian li a.temp { margin-top: 10px; height: 310px; }
@@ -64,6 +67,7 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .xianshi { margin-top: 22px; background-color: #809f66; padding-bottom: 20px; }
 .content .content_wrap .xianshi h5 { background-color: transparent; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; }
 .content .content_wrap .xianshi h5 a { float: right; font-size: 16px; color: #fff; }
+.content .content_wrap .xianshi h5 a:hover { text-decoration: underline; }
 .content .content_wrap .xianshi ul { padding: 0 6px; box-sizing: border-box; }
 .content .content_wrap .xianshi li { float: left; width: 25%; margin-top: 20px; padding: 6px; box-sizing: border-box; }
 .content .content_wrap .xianshi li a.img { display: block; position: relative; box-sizing: border-box; }
