--- a/css/index.css
+++ b/css/index.css
@@ -50,8 +50,8 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .hot li .desc h6 { font-size: 24px; color: #fff; font-weight: bold; }
 .content .content_wrap .hot li .desc p { font-size: 14px; color: #fff; }
 .content .content_wrap .tuijian { margin-top: 22px; }
-.content .content_wrap .tuijian h5 { background-color: #809f66; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; }
-.content .content_wrap .tuijian h5 a { float: right; font-size: 16px; color: #fff; }
+.content .content_wrap .tuijian h5 { background-color: #809f66; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; position: relative; }
+.content .content_wrap .tuijian h5 a { position: absolute; right: 25px; font-size: 16px; color: #fff; }
 .content .content_wrap .tuijian h5 a:hover { text-decoration: underline; }
 .content .content_wrap .tuijian li { float: left; width: 25%; margin-top: 20px; padding: 1px; box-sizing: border-box; }
 .content .content_wrap .tuijian li a { display: block; position: relative; }
@@ -65,8 +65,8 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .tuijian li.lunbo .swiper-button-prev, .swiper-container-rtl .swiper-button-next { background-color: rgba(128,159,102,0.6); left: 0; width: 50px; height: 50px; }
 .swiper-button-next.swiper-button-white, .swiper-container-rtl .swiper-button-prev.swiper-button-white { background-color: rgba(128,159,102,0.6); right: 0; width: 50px; height: 50px; }
 .content .content_wrap .xianshi { margin-top: 22px; background-color: #809f66; padding-bottom: 20px; }
-.content .content_wrap .xianshi h5 { background-color: transparent; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; }
-.content .content_wrap .xianshi h5 a { float: right; font-size: 16px; color: #fff; }
+.content .content_wrap .xianshi h5 { background-color: transparent; text-align: center; font-size: 28px; color: #fff; height: 80px; line-height: 80px; padding: 0 25px; box-sizing: border-box; position: relative; }
+.content .content_wrap .xianshi h5 a { position: absolute; right: 25px; font-size: 16px; color: #fff; }
 .content .content_wrap .xianshi h5 a:hover { text-decoration: underline; }
 .content .content_wrap .xianshi ul { padding: 0 6px; box-sizing: border-box; }
 .content .content_wrap .xianshi li { float: left; width: 25%; margin-top: 20px; padding: 6px; box-sizing: border-box; }
