--- a/css/index.css
+++ b/css/index.css
@@ -75,8 +75,8 @@ a{text-decoration:none; cursor:pointer;}
 .content .content_wrap .xianshi li a.img:hover:after { content: ''; width: 100%; height: 100%; border: 1px solid #434343; position: absolute; left: -1px; top: -1px; box-shadow: 0 0 6px 2px rgba(87,122,65,0.8); }
 .content .content_wrap .xianshi li a.img .time { width: 180px; height: 34px; text-align: center; line-height: 34px; background-color: rgba(192,192,192,0.6); font-size: 16px; color: #7d0101; position: absolute; top: 30px; right: 0; }
 .content .content_wrap .xianshi li .desc_btn { font-size: 16px; line-height: 16px; color: #fff; margin-top: 12px; }
-.content .content_wrap .xianshi li .desc_btn p { display: inline-block; width: 170px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; cursor: pointer; }
-.content .content_wrap .xianshi li .desc_btn p:hover,.content .content_wrap .xianshi li .desc_btn p.active { text-decoration: underline; }
+.content .content_wrap .xianshi li .desc_btn p { display: inline-block; width: 170px; padding-bottom: 1px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden; cursor: pointer; }
+.content .content_wrap .xianshi li .desc_btn p:hover { text-decoration: underline; }
 .content .content_wrap .xianshi li .desc_btn a { display: inline-block; width: 52px; height: 20px; text-align: center; line-height: 20px; background-color: #fff; color: #809f66; margin-left: 10px; box-sizing: border-box; position: relative; }
 .content .content_wrap .xianshi li .desc_btn a:hover:after { content: ''; border: 1px solid #fff; width: 56px; height: 24px; position: absolute; left: -3px; top: -3px; }
 .footer { width: 100%; min-width: 1200px; padding: 58px 0 62px; background-color: #809f66; }
